package com.ood.snakeLadder;

public enum CellType {

    SNAKE, LADDER;

}
