package com.ood.snakeLadder;

public class Ladder extends Cell{

    Ladder(int start, int end) {
        super(start, end, CellType.LADDER);
    }


}
