package com.ood.snakeLadder;

public class Snake extends Cell{

    Snake(int start, int end) {
        super(start, end, CellType.SNAKE);
    }

}
